2004-09-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/phrasing-slur-engraver.cc (process_music): Create
	PhrasingSlur instead of Slur.

	* Documentation/user/changing-defaults.itely (Defining new
	contexts): Fixed misprinted context name.

2004-09-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/property-init.ly (hideStaffSwitch): remove turnOff.

	* scripts/convert-ly.py (conv): change Both to Neutral in property
	settings.

	* ly/engraver-init.ly: increase extent of Staff. 

2004-09-13  Graham Percival  <gperlist@shaw.ca>

	* scm/script.scm: change behaviour of slur and accent.

	* Documentation/user/music-glossary.tely: de-gender a few entires.

	* Documentation/user/introduction.itely: de-gender a few sentences.

2004-09-13  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* input/regression/rehearsal-mark-number.ly: Reuse the existing
	formatting routine when adding boxed numbers. Makes it easier to
	extrapolate how to do for boxed letters.

2004-09-12  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: fixed Time Signature numbers bug.

	* Documentation/user/invoking.itexi: updated the "reporting bugs" section.

2004-09-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/define-grobs.scm (all-grob-descriptions): longer
	ideallengths for stems in higher order beams.

	* Documentation/user/changing-defaults.itely (Page layout):
	document them.

	* scm/page-layout.scm (ly:optimal-page-breaks): use new parameters
 	to get sane spaces for titles.

	* ly/book-paper-defaults.ly: new parameters aftertitlespace,
	beforetitlespace, betweentitlespace.

	* input/regression/beam-quant-standard.ly (primeSixteenths): add
	16th notes.

	* lily/beam.cc (set_minimum_dy): new function. Round non-zero
	small slope up to smallest quant. This prevents small slopes from
	getting rounded to zero.

	* lily/beam-quanting.cc (quanting): don't allow dy_mus slopes that
	are smaller than the smallest quant.

	* input/tutorial/brahms*.ly: remove.
